# AI-Customer-Relationship-Management

./: .env example  pyproject.toml
app/: main.py
app/api/routes/documents/: documents_add.py
app/api/routes/user/: chat_routes.py  router.py
app/core/: loadenv.py
app/db/model/: chat_model.py  document_model.py
app/db/schema/: chat_schema.py  document_schema.py
app/services/ai/: chat_service.py  rag_service.py
app/services/ai/tools/: product_tool.py  test_tool.py
app/services/email/: email_agent.py
app/services/embedding/: embedding_service.py
app/services/filter/: filter_service.py
