[project]
name = "crm-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.2",
    "instructor>=1.11.3",
    "langchain-groq>=0.3.8",
    "langchain-mcp-adapters>=0.1.11",
    "langgraph>=0.6.10",
    "mcp>=1.18.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "uvicorn>=0.37.0",
]
